--- a/src/app/pages/profile/profile.html
+++ b/src/app/pages/profile/profile.html
@@ -13,6 +13,8 @@
       <app-orders-tab *ngIf="activeTab === 'orders'"></app-orders-tab>
       <app-reviews-favorites-tab *ngIf="activeTab === 'reviews'"></app-reviews-favorites-tab>
       <app-security-tab *ngIf="activeTab === 'security'"></app-security-tab>
+      <app-seller-requests-tab *ngIf="activeTab === 'seller-requests'"></app-seller-requests-tab>
+      <app-seller-tab *ngIf="activeTab === 'seller'"></app-seller-tab>
     </section>
   </div>
 </div>
