--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -58,6 +58,11 @@
   color: #ff7b00;
 }
 
+.nav-links a.active {
+  color: #ff7b00;
+  font-weight: 600;
+}
+
 .header-right {
   display: flex;
   align-items: center;
